对于商品的模糊匹配进行完善
